css: stop tables stretching to fill window
After adding Bootstrap, tables automatically stretch to fill the window.
This makes the report less readable. Therefore this patch overwrites the
Bootstrap table css using 'css/style.css'.

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@
 .table  {
     table-layout: fixed;
     border-collapse: collapse;
+    width: auto;
 }
 
 .table th {
